continued work on logo - corrected halo effect on contrasting background

--- a/public/css/general-site.css
+++ b/public/css/general-site.css
@@ -20,10 +20,15 @@
     font-size: 72px;
 }
 
-.monkey-logo {
-	src: url(monkey.png);
-}
 
 .title {
 	text-align: center;
+}
+
+body {
+	background-color: #BFA799;
+	background-repeat: space;
+	background-image: url("background.png");
+	background-size: 75px;
+
 }
